# DIFFIL-xarm6

./: .gitignore  D3IL_GUIDE.md  LAPTOP_GUIDE.md  PIPELINE.md  README.md  README_menguri.md  pyproject.toml  requirements-actor.txt  requirements-learner.txt  requirements-sim.txt  requirements.txt
assets/: scene_pusher.xml  scene_reach.xml  scene_reach_tmp.xml
data/: safe_waypoints.npz
outputs/: report.md
scripts/: 10_collect_delta_dataset.sh  10_collect_random_dataset.sh  demo_grid_tour.py  deploy_grid_tour.py  deploy_real.py  diag_servo.py  eval.py  eval_bc.py  eval_headless.py  explore.py  joy_telecontrol_serial.py  joy_telecontrol_serial_org.py  measure_reach_steps.py  random_collect_d3il.py  real_reach_collector.py  render_gif.py  run_real_reach_collect.py  sanity_random.py  teach_goal.py  train.py  train_and_collect_d3ilver.py  train_and_collect_d3ilver_v2.py  train_bc.py  vis.py  vis_real.py
scripts/assets/: scene_pick_place.xml  scene_reach.xml
scripts/diffil/: README.md  __init__.py  actor_node.py  build_d3il.py  build_diffil.py  check_build.py  check_d3il_build.py  collect_sim_demos.py  comm.py  d3il_eval_node.py  d3il_learner_node.py  dataset_conform.py  dataset_to_gif.py  disentangail_models_cycle.py  disentangail_models_cycle_default.py  inspect_dataset.py  learner_node.py  make_safe_waypoints.py  npz_to_npy.py  policy_runtime.py  real_diffil_env.py  test_policy_transfer.py  truncate_and_split.py  weight_io.py
scripts/xarm_rl/: __init__.py
xarm_rl/: __init__.py
xarm_rl/envs/: base_env.py  base_env_old.py  diffil_adapter.py  pick_place_env.py  (+2 more)
(+5 files in other folders)
