[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xarm-rl"
version = "0.1.0"
description = "State-based RL for xArm6 (MuJoCo sim + sim2real to real xArm via XArmAPI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.2.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
    "numpy>=1.24",
    "torch>=2.1",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
real = ["xArm-Python-SDK"]

[tool.setuptools.packages.find]
include = ["xarm_rl*"]
